# Alcatel-AOS8-MCP

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: mcp-developer.agent.md  mcp-documenter.agent.md  mcp-scaffolder.agent.md  mcp-tester.agent.md
src/mcp_server/: server.py
src/mcp_server/resources/: example.py
src/mcp_server/ssh/: __init__.py  auth.py  client.py
src/mcp_server/tools/: __init__.py  _write_guard.py  cloud_agent.py  core.py  dhcp.py  diagnostics.py  example.py  health.py  lacp.py  ntp.py  poe.py  poe_approval.py  port_security.py  ports.py  qos.py  routing.py  sflow.py  snmp.py  spantree.py  unp.py  virtual_chassis.py  vlan.py
tests/: test_poe_approval.py  test_resources.py  test_ssh.py  test_tools.py  test_tools_advanced.py  test_tools_core.py  test_tools_routing.py  test_write_guard.py
