[project]
name = "alcatel-aos8-mcp"
version = "1.1.0"
description = "MCP server for Alcatel-Lucent Enterprise OmniSwitch AOS8 network devices"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "alcatel-lucent", "aos8", "omniswitch", "network", "ssh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "asyncssh>=2.14.0",
    "starlette>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/rpoulard-alcatel/Alcatel-AOS8-MCP"
Documentation = "https://modelcontextprotocol.io"
"Bug Tracker" = "https://github.com/rpoulard-alcatel/Alcatel-AOS8-MCP/issues"

[project.scripts]
mcp-server = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/mcp_server"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
